Cache bust on new raceEditor js code

--- a/SailScores.Web/Views/Race/Create.cshtml
+++ b/SailScores.Web/Views/Race/Create.cshtml
@@ -340,5 +340,5 @@
     <script>
     var scoreCodes = @Html.Raw(Json.Serialize(Model.ScoreCodeOptions));
     </script>
-    <script src="~/js/raceEditor.min.js"></script>
+    <script src="~/js/raceEditor.min.js"  asp-append-version="true"></script>
 }
