--- a/SailScores.Web/Views/Race/Edit.cshtml
+++ b/SailScores.Web/Views/Race/Edit.cshtml
@@ -297,5 +297,6 @@
     <script>
     var scoreCodes = @Html.Raw(Json.Serialize(Model.ScoreCodeOptions));
     </script>
-    <script src="~/js/raceEditor.min.js"></script>
+    <script src="~/js/raceEditor.min.js" asp-append-version="true"></script>
+
 }
