--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -27,7 +27,7 @@
 <br />
 <h4>What's the catch?</h4>
 <p>
-    <i>Why is SailScores free? What about "If you're not paying for a service, you are the product."?</i>
+    <em>Why is SailScores free? What about "If you're not paying for a service, you are the product."?</em>
 </p>
 <p>
     The expense to host this site is less than $20 a month.
