--- a/SailScores.Web/Views/Shared/_ResultsTable.cshtml
+++ b/SailScores.Web/Views/Shared/_ResultsTable.cshtml
@@ -81,13 +81,13 @@
                         <div class="weather">
                             @if (race.WindDirectionDegrees.HasValue)
                             {
-                                <i class="wi wi-wind from-@race.WindDirectionDegrees?.ToString("N0")-deg ss-wi" data-toggle="tooltip" title="@race.WindDirectionDegrees?.ToString("N0")°"></i>
+                                <span class="wi wi-wind from-@race.WindDirectionDegrees?.ToString("N0")-deg ss-wi" data-toggle="tooltip" title="@race.WindDirectionDegrees?.ToString("N0")°"></span>
                             }
                             @if (!string.IsNullOrWhiteSpace(race.WindSpeed))
                             {<span data-toggle="tooltip" title="mph">@race.WindSpeed</span>}
                             @if (!string.IsNullOrWhiteSpace(race.WeatherIcon))
                             {
-                                <i class="wi @weatherService.GetIconCharacter(race.WeatherIcon) ss-wi"></i>
+                                <span class="wi @weatherService.GetIconCharacter(race.WeatherIcon) ss-wi"></span>
                             }
                         </div>
                     }
