--- a/SailScores.Web/Views/Fleet/Create.cshtml
+++ b/SailScores.Web/Views/Fleet/Create.cshtml
@@ -18,7 +18,7 @@
             <div class="form-group">
                 <label asp-for="ShortName" class="control-label"></label>
                 <small>
-                    Should not be the same as any other fleet name for this club, e.g. <i>2019DieHardMCs</i><br />
+                    Should not be the same as any other fleet name for this club, e.g. <em>2019DieHardMCs</em><br />
                     Used to create URLs for regattas.
                 </small>
                 <input asp-for="ShortName" class="form-control" />
@@ -26,13 +26,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <small>The full name of the fleet, with spaces, such as <i>2019 Die Hard MC Scows</i></small>
+                <small>The full name of the fleet, with spaces, such as <em>2019 Die Hard MC Scows</em></small>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="NickName" class="control-label"></label>
-                <small>Does not need to be unique, used as a display nickname only, e.g. <i>MC Scows</i></small>
+                <small>Does not need to be unique, used as a display nickname only, e.g. <em>MC Scows</em></small>
                 <input asp-for="NickName" class="form-control" />
                 <span asp-validation-for="NickName" class="text-danger"></span>
             </div>
