--- a/SailScores.Web/Views/Race/Edit.cshtml
+++ b/SailScores.Web/Views/Race/Edit.cshtml
@@ -88,7 +88,7 @@
                                     <option>Select...</option>
                                     @foreach (var icon in Model.WeatherIconOptions)
                                     {
-                                        <option data-content="<i class='wi @icon.Value'></i>" value="@icon.Key"></option>
+                                <option data-content="<span class='wi @icon.Value'></span>" value="@icon.Key">@icon.Key</option>
                                     }
                                 </select>
                                 <input id="weatherDescription" asp-for="Weather.Description" class="form-control col-6 col-md-8" />
