--- a/SailScores.Web/Views/Shared/_ResultsTable.cshtml
+++ b/SailScores.Web/Views/Shared/_ResultsTable.cshtml
@@ -17,7 +17,7 @@
 @if (Model != null)
 {
     <div class="table-responsive-sm">
-        <table class="table table-hover table-sm">
+        <table class="table table-hover table-sm" summary="Results for series">
             <thead>
                 <tr>
                     <th scope="col">@localizer["Place"]</th>
