--- a/SailScores.Web/Views/Admin/_FleetList.cshtml
+++ b/SailScores.Web/Views/Admin/_FleetList.cshtml
@@ -32,8 +32,8 @@
                     @Html.DisplayFor(modelItem => item.FleetType)
                 </div>
                 <div class="col-6 col-sm-4 col-md-2">
-                    @Html.ActionLink("Edit", "Edit", "BoatClass", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", "BoatClass", new { id = item.Id })
+                    @Html.ActionLink("Edit", "Edit", "Fleet", new { id = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", "Fleet", new { id = item.Id })
                 </div>
             </div>
                 }
