--- a/SailScores.Web/Views/Season/Delete.cshtml
+++ b/SailScores.Web/Views/Season/Delete.cshtml
@@ -11,6 +11,7 @@
 <div>
     <h4>Season</h4>
     <hr />
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Name)
@@ -31,7 +32,7 @@
             @Html.DisplayFor(model => model.End)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="hidden" asp-for="ClubId" />
