--- a/SailScores.Web/Views/Race/_scoreEntryPartial.cshtml
+++ b/SailScores.Web/Views/Race/_scoreEntryPartial.cshtml
@@ -1,5 +1,6 @@
-﻿@model SailScores.Web.Models.SailScores.RaceWithOptionsViewModel
+﻿@using SailScores.Web.Extensions;
 
+@model SailScores.Web.Models.SailScores.RaceWithOptionsViewModel
 
 <li class="list-group-item" id="competitorTemplate" style="display: none;">
     <div class="d-flex w-100 flex-wrap">
