WIP: Competitor chart selector fixed
Still need to select competitors based on name.

--- a/SailScores.Web/Views/Competitor/Details.cshtml
+++ b/SailScores.Web/Views/Competitor/Details.cshtml
@@ -46,9 +46,9 @@
     </div>
     <div class="row">
         <div class="col-12">
-            <svg id="chart-@(SeasonStats.SeasonName)" class="season-chart"
+            <svg id="chart-@(SeasonStats.SeasonUrlName)" class="season-chart"
                     data-competitor-id="@Model.Item.Id"
-                    data-season-name="@SeasonStats.SeasonName"></svg>
+                    data-season-name="@SeasonStats.SeasonUrlName"></svg>
         </div>
     </div>
     }
