Clear out default weather data if race date changed

--- a/SailScores.Web/Views/Race/Edit.cshtml
+++ b/SailScores.Web/Views/Race/Edit.cshtml
@@ -15,6 +15,7 @@
         <input type="hidden" id="clubInitials" asp-for="ClubInitials" />
         <input type="hidden" id="clubId" asp-for="ClubId" />
         <input type="hidden" id="Id" asp-for="Id" />
+        <input type="hidden" id="defaultWeather" value="false" />
         <input type="hidden" asp-for="Weather.TemperatureUnits" />
         <input type="hidden" asp-for="Weather.WindSpeedUnits" />
         <input type="hidden" id="cloudCover" asp-for="Weather.CloudCoverPercent" />
