--- a/SailScores.Web/Views/Race/Create.cshtml
+++ b/SailScores.Web/Views/Race/Create.cshtml
@@ -41,6 +41,7 @@
         <input type="hidden" id="clubInitials" asp-for="ClubInitials" />
         <input type="hidden" id="clubId" asp-for="ClubId" />
         <input type="hidden" id="regattaId" asp-for="RegattaId" />
+        <input type="hidden" id="defaultWeather" value="true" />
         <input type="hidden" asp-for="Weather.TemperatureUnits" />
         <input type="hidden" asp-for="Weather.WindSpeedUnits" />
         <input type="hidden" id="cloudCover" asp-for="Weather.CloudCoverPercent" />
@@ -141,7 +142,7 @@
                                         <option data-content="<span class='wi @icon.Value'></span>" value="@icon.Key">@icon.Key</option>
                                     }
                                 </select>
-                                <input id="weatherDescription" asp-for="Weather.Description" class="form-control col-6 col-md-8" />
+                                <input id="weatherDescription" asp-for="Weather.Description" class="form-control col-6 col-md-8 weather-input" />
                                 <span asp-validation-for="Weather.Description" class="text-danger"></span>
                             </div>
                         </div>
@@ -149,7 +150,7 @@
                             <div class="form-group col-6">
                                 <div class="form-row">
                                     <label asp-for="Weather.WindSpeed" class="control-label col-6 col-md-4 col-form-label ">Wind</label>
-                                    <input id="windSpeed" asp-for="Weather.WindSpeed" class="form-control col-3 text-center" type="number" />
+                                    <input id="windSpeed" asp-for="Weather.WindSpeed" class="form-control col-3 text-center weather-input" type="number" />
                                     <div class="col-3 col-form-label">@Model.Weather?.WindSpeedUnits</div>
                                     <span asp-validation-for="Weather.WindSpeed" class="text-danger"></span>
                                 </div>
@@ -157,7 +158,7 @@
                             <div class="form-group col-6">
                                 <div class="form-row">
                                     <label asp-for="Weather.WindDirection" class="control-label col-4 col-form-label ">Dir</label>
-                                    <input id="windDirection" asp-for="Weather.WindDirection" class="form-control col-3 text-center" />
+                                    <input id="windDirection" asp-for="Weather.WindDirection" class="form-control col-3 text-center weather-input" />
                                     <span asp-validation-for="Weather.WindDirection" class="text-danger"></span>
                                 </div>
                             </div>
@@ -166,7 +167,7 @@
                             <div class="form-group col-6">
                                 <div class="form-row">
                                     <label asp-for="Weather.WindGust" class="control-label col-6 col-md-4 col-form-label ">Gust</label>
-                                    <input id="windGust" asp-for="Weather.WindGust" class="form-control col-3 text-center" type="number" />
+                                    <input id="windGust" asp-for="Weather.WindGust" class="form-control col-3 text-center weather-input" type="number" />
                                     <div class="col-3 col-form-label">@Model.Weather?.WindSpeedUnits</div>
                                     <span asp-validation-for="Weather.WindGust" class="text-danger"></span>
                                 </div>
@@ -174,7 +175,7 @@
                             <div class="form-group col-6">
                                 <div class="form-row">
                                     <label asp-for="Weather.Temperature" class="control-label col-4 col-form-label ">Temp</label>
-                                    <input id="temperature" asp-for="Weather.Temperature" class="form-control col-3 text-center" type="number" />
+                                    <input id="temperature" asp-for="Weather.Temperature" class="form-control col-3 text-center weather-input" type="number" />
                                     <div class="col-3 col-form-label">@Model.Weather?.TemperatureLabel</div>
                                     <span asp-validation-for="Weather.Temperature" class="text-danger"></span>
                                 </div>
