--- a/SailScores.Web/Views/Shared/_Layout.cshtml
+++ b/SailScores.Web/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
     </header>
 
     <div class="container body-content">
-        <main class="col-12 col-lg-9 py-md-3 pl-md-5 bd-content" role="main">
+        <main class="col-12 py-md-3 pl-md-5 bd-content" role="main">
             @RenderBody()
         </main>
         <hr />
