--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -8,7 +8,40 @@
 <p class="lead">Simple score collection and reporting for one-design sailing.</p>
 <hr class="my-4">
 <div class="row">
-    <div class="col-md-6 order-md-first order-last">
+    <div class="col-md-4 d-none d-md-block order-md-0">
+        <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="/images/TypiqueSeries.png" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="/images/TypiqueRaceEntry.png" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="/images/TypiqueMainPage.png" alt="Third slide">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-4 order-md-8">
+        <br class="d-none d-md-inline" />
+        @(await Html.PartialAsync("_ClubSelectorView", Model.ClubSelectorModel))
+        <br />
+        @if (Model.RegattaSelectorModel?.Regattas?.Any() ?? false)
+        {
+            @(await Html.PartialAsync("_RegattaSelectorView", Model.RegattaSelectorModel))
+            <br />
+        }
+        <hr class="my-4">
+        <span class="d-none d-md-inline">
+            <br />
+            <p>SailScores is <a href="https://github.com/jbfraser1/SailScores">open source</a> and volunteer driven.</p>
+            <p>
+                <a asp-area="" asp-controller="ClubRequest" asp-action="Index">Host your club's scores</a> on this site for free.
+            </p>
+        </span>
+    </div>
+    <div class="col-md-4 order-md-5">
         <h4>What's important in sailing club scoring software?</h4>
         <ul>
             <li>Fast, simple result entry and sharing using the web.</li>
@@ -23,25 +56,7 @@
             <li>Count a single race in one or many series.</li>
             <li>Club landing page can include links to home page or other results.</li>
             <li>Smartphone, MacOS, and Windows friendly.</li>
-
         </ul>
     </div>
-    <div class="col-md-6">
-        <br class="d-none d-md-inline" />
-        @(await Html.PartialAsync("_ClubSelectorView", Model.ClubSelectorModel))
-        <br />
-        @if (Model.RegattaSelectorModel?.Regattas?.Any() ?? false)
-        {
-        @(await Html.PartialAsync("_RegattaSelectorView", Model.RegattaSelectorModel))
-        <br />
-        }
-        <hr class="my-4">
-        <span class="d-none d-md-inline">
-            <br />
-            <p>SailScores is <a href="https://github.com/jbfraser1/SailScores">open source</a> and volunteer driven.</p>
-            <p>
-                <a asp-area="" asp-controller="ClubRequest" asp-action="Index">Host your club's scores</a> on this site for free.
-            </p>
-        </span>
-    </div>
+
 </div>
