--- a/SailScores.Web/Views/Competitor/CreateMultiple.cshtml
+++ b/SailScores.Web/Views/Competitor/CreateMultiple.cshtml
@@ -52,7 +52,7 @@
         <div class="row">
             <div class="col-12">
                 <div id="allCompetitors">
-                    <div class="row">
+                    <div class="row d-none d-md-flex">
                         <div class="col-md-3">
                             <div class="form-group">
                                 @localizer["Sail"]
@@ -75,89 +75,134 @@
                         </div>
                     </div>
                     <div class="row" id="compRowTemplate" style="display: none">
-                        <div class="col-md-3">
+                        <div class="col-3 d-md-none">
+                            @localizer["Sail"]
+                        </div>
+                        <div class="col-9 col-md-3">
                             <div class="form-group">
                                 <input type="text" name="template.SailNumber" class="form-control" />
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-3 d-md-none">
+                            @localizer["Helm"]
+                        </div>
+                        <div class="col-9 col-md-3">
                             <div class="form-group">
                                 <input type="text" name="template.Name" class="form-control" />
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-3 d-md-none">
+                            @localizer["Boat"]
+                        </div>
+                        <div class="col-9 col-md-3">
                             <div class="form-group">
                                 <input type="text" name="template.BoatName" class="form-control" />
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-3 d-md-none">
+                            Home Club
+                        </div>
+                        <div class="col-9 col-md-3">
                             <div class="form-group">
                                 <input type="text" name="template.HomeClubName" class="form-control" />
                             </div>
+                        </div>
+                        <div class="col-12 d-md-none">
+                            <hr class="d-md-none" />
                         </div>
                     </div>
                     @if (Model.Competitors != null && Model.Competitors.Count > 0)
                     {
                         for (int i = 0; i < Model.Competitors.Count; i++)
                         {
-                            <div class="row competitor-row">
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        <input type="text" name="competitors[@i].SailNumber" class="form-control
+                <div class="row competitor-row">
+                    <div class="col-3 d-md-none">
+                        @localizer["Sail"]
+                    </div>
+                    <div class="col-9 col-md-3">
+                        <div class="form-group">
+                            <input type="text" name="competitors[@i].SailNumber" class="form-control
                                                @(ViewData.ModelState[$"competitors[{i}].SailNumber"]?.ValidationState == ModelValidationState.Invalid ? "is-invalid": string.Empty)"
-                                               data-column="0" data-row="@i" value="@Model.Competitors[i].SailNumber" />
-                                        <span asp-validation-for="Competitors[i].SailNumber" class="text-danger"></span>
-                                    </div>
-                                </div>
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        <input type="text" name="competitors[@i].Name" class="form-control"
-                                               data-column="1" data-row="@i" value="@Model.Competitors[i].Name" />
-                                    </div>
-                                </div>
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        <input type="text" name="competitors[@i].BoatName" class="form-control"
-                                               data-column="2" data-row="@i" value="@Model.Competitors[i].BoatName" />
-                                    </div>
-                                </div>
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        <input type="text" name="competitors[@i].HomeClubName" class="form-control"
-                                               data-column="3" data-row="@i" value="@Model.Competitors[i].HomeClubName" />
-                                    </div>
-                                </div>
-                            </div>
+                                   data-column="0" data-row="@i" value="@Model.Competitors[i].SailNumber" />
+                            <span asp-validation-for="Competitors[i].SailNumber" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="col-3 d-md-none">
+                        @localizer["Helm"]
+                    </div>
+                    <div class="col-9 col-md-3">
+                        <div class="form-group">
+                            <input type="text" name="competitors[@i].Name" class="form-control"
+                                   data-column="1" data-row="@i" value="@Model.Competitors[i].Name" />
+                        </div>
+                    </div>
+                    <div class="col-3 d-md-none">
+                        @localizer["Boat"]
+                    </div>
+                    <div class="col-9 col-md-3">
+                        <div class="form-group">
+                            <input type="text" name="competitors[@i].BoatName" class="form-control"
+                                   data-column="2" data-row="@i" value="@Model.Competitors[i].BoatName" />
+                        </div>
+                    </div>
+                    <div class="col-3 d-md-none">
+                        Home Club
+                    </div>
+                    <div class="col-9 col-md-3">
+                        <div class="form-group">
+                            <input type="text" name="competitors[@i].HomeClubName" class="form-control"
+                                   data-column="3" data-row="@i" value="@Model.Competitors[i].HomeClubName" />
+                        </div>
+                    </div>
+                    <div class="col-12 d-md-none">
+                        <hr class="d-md-none" />
+                    </div>
+                </div>
                         }
                     }
                     else
                     {
-                        <div class="row competitor-row">
-                            <div class="col-md-3">
-                                <div class="form-group">
-                                    <input type="text" name="competitors[0].SailNumber" class="form-control"
-                                           data-column="0" data-row="0" />
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="form-group">
-                                    <input type="text" name="competitors[0].Name" class="form-control"
-                                           data-column="1" data-row="0" />
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="form-group">
-                                    <input type="text" name="competitors[0].BoatName" class="form-control"
-                                           data-column="2" data-row="0" />
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="form-group">
-                                    <input type="text" name="competitors[0].HomeClubName" class="form-control"
-                                           data-column="3" data-row="0" />
-                                </div>
-                            </div>
+                <div class="row competitor-row">
+                    <div class="col-3 d-md-none">
+                        @localizer["Sail"]
+                    </div>
+                    <div class="col-9 col-md-3">
+                        <div class="form-group">
+                            <input type="text" name="competitors[0].SailNumber" class="form-control"
+                                   data-column="0" data-row="0" />
                         </div>
+                    </div>
+                    <div class="col-3 d-md-none">
+                        @localizer["Helm"]
+                    </div>
+                    <div class="col-9 col-md-3">
+                        <div class="form-group">
+                            <input type="text" name="competitors[0].Name" class="form-control"
+                                   data-column="1" data-row="0" />
+                        </div>
+                    </div>
+                    <div class="col-3 d-md-none">
+                        @localizer["Boat"]
+                    </div>
+                    <div class="col-9 col-md-3">
+                        <div class="form-group">
+                            <input type="text" name="competitors[0].BoatName" class="form-control"
+                                   data-column="2" data-row="0" />
+                        </div>
+                    </div>
+                    <div class="col-3 d-md-none">
+                        Home Club
+                    </div>
+                    <div class="col-9 col-md-3">
+                        <div class="form-group">
+                            <input type="text" name="competitors[0].HomeClubName" class="form-control"
+                                   data-column="3" data-row="0" />
+                        </div>
+                    </div>
+                    <div class="col-12 d-md-none">
+                        <hr class="d-md-none" />
+                    </div>
+                </div>
                     }
                 </div>
                 <button class="btn btn-light" type="button"
