--- a/SailScores.Web/Views/Shared/_Layout.cshtml
+++ b/SailScores.Web/Views/Shared/_Layout.cshtml
@@ -70,7 +70,7 @@
     <environment include="Development">
         <script src="~/vendor/jquery/jquery.js"></script>
         <script src="~/vendor/popper.js/umd/popper.js"></script>
-        <script src="~/vendor/bootstrap/js/bootstrap.js"></script>
+        <script src="~/vendor/bootstrap/js/bootstrap.min.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
