--- a/SailScores.Web/Views/ScoringSystem/Edit.cshtml
+++ b/SailScores.Web/Views/ScoringSystem/Edit.cshtml
@@ -42,15 +42,15 @@
                 </p>
                 <dl class="small mx-3">
                     <dt class="col-sm-3">0,0,1,1,1,2</dt>
-                    <dd class="col-sm-9">One race will be discarded if there are
-                                three, four, or five races, and two races will be discarded if
+                    <dd class="col-sm-9">One discard if there are
+                                three, four, or five races, and two discards if
                                 there are six or more races.</dd>
                     <dt class="col-sm-3">0,0,0,1</dt>
-                    <dd class="col-sm-9">One race will be discarded if there are
+                    <dd class="col-sm-9">One discard if there are
                         four or more races.</dd>
                     <dt class="col-sm-3">0,0,1,1,1,2,2,2,3,3,3,4</dt>
                     <dd class="col-sm-9">One
-                        discard for every three races, up to 12 races. more
+                        discard for every three races, up to 12 races. More
                         than 12 races will have four discards.</dd>
                 </dl>
             </div>
