Need speed for Club Stats
WIP


WIP continues


WIP: getting there


WIP: stat display needs work


hide total if one fleet


Club Stats page cleaned up

--- a/SailScores.Web/Views/Club/Index.cshtml
+++ b/SailScores.Web/Views/Club/Index.cshtml
@@ -192,5 +192,10 @@
                asp-route-returnUrl="@settingsService.GetPreferredUri(Context.Request)"
                class="btn btn-outline-primary">@localizer["New Race"]</a>
         </div>
+        <div class="col-sm-3 my-2 d-none d-md-block">
+            <a asp-controller="Club"
+               asp-action="Stats"
+               class="btn btn-outline-primary">@localizer["Club Stats"]</a>
+        </div>
     </div>
 }
